[gd_scene load_steps=6 format=2]

[ext_resource path="res://code/ui/main_menu/credits_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/others/Credits.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/fonts/alagard_by_pix3m-d6awiwp.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sounds/bgm/1. The Market (online-audio-converter.com).ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 37
font_data = ExtResource( 3 )

[node name="Node" type="Node2D"]
scale = Vector2( 1.86, 1.8 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 511.99, 300.001 )
scale = Vector2( 0.93428, 1.21947 )
texture = ExtResource( 2 )

[node name="Title" type="Button" parent="."]
margin_left = 20.505
margin_top = 487.437
margin_right = 510.505
margin_bottom = 536.437
focus_neighbour_top = NodePath("../More Credits")
focus_neighbour_bottom = NodePath("../More Credits")
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
text = "Return to the Title Screen"
flat = true

[node name="More Credits" type="Button" parent="."]
margin_left = 20.5051
margin_top = 419.911
margin_right = 510.505
margin_bottom = 468.911
focus_neighbour_top = NodePath("../Title")
focus_neighbour_bottom = NodePath("../Title")
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.996078, 0, 0, 1 )
text = "Next Page"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -14.0
autoplay = true

[connection signal="focus_entered" from="Title" to="." method="_on_Title_focus_entered"]
[connection signal="pressed" from="Title" to="." method="_on_Button_pressed"]
[connection signal="focus_entered" from="More Credits" to="." method="_on_More_Credits_focus_entered"]
[connection signal="pressed" from="More Credits" to="." method="_on_More_Credits_pressed"]
